bat.bool1.nearhundred.NearHundred.scala.error
Erreur de compilation :
NearHundred:4: error: Unmatched closing brace '}' ignored here
}
^