bat.bool1.nearhundred.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {return(Math.asb(100-Math.abs(n))<11 )}
}